<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.permission.PermissionActivity">


    <!-- imgPermission -->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_app"
        android:scaleType="centerCrop"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <ImageView
        android:id="@+id/imgPermission"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:maxHeight="329dp"
        app:layout_constraintDimensionRatio="1:1"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="-60dp"
        app:layout_constraintTop_toBottomOf="@id/tvPermission"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:adjustViewBounds="true"
        android:src="@drawable/img_permission" />

    <!-- txtPermission -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/txtPermission"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@id/imgPermission"
        android:fontFamily="@font/londrina_solid_regular">

        <com.tempttt.core.custom.text.DoubleStrokeTextView
            android:id="@+id/txtPer"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:layout_gravity="center"
            android:fontFamily="@font/luckiestguy_regular"
            android:gravity="center"
            android:paddingHorizontal="20dp"
            android:textColor="@color/app"
            android:shadowColor="@color/white"
            android:shadowDy="2"
            android:shadowRadius="2"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.4"
            tools:text="Allow Permissionsằbfbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbaaa" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- btnStorage -->
    <RelativeLayout
        android:id="@+id/btnStorage"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:layout_marginTop="12dp"
        android:layout_marginHorizontal="23dp"

        app:layout_constraintTop_toBottomOf="@id/btnNotification"
        android:background="@drawable/bg_frame_per">

        <com.tempttt.core.custom.text.DoubleStrokeTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="32dp"
            android:shadowColor="#33FFFFFF"
            android:shadowDy="5"
            android:shadowRadius="5"
            app:outerStrokeColor="@color/app"

            android:fontFamily="@font/luckiestguy_regular"
            android:gravity="start"
            android:text="@string/storage"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/swPermission"
            android:layout_width="56dp"
            android:layout_height="32dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="9dp"
            android:scaleType="fitXY"

            android:layout_marginEnd="25dp"
            android:src="@drawable/ic_sw_off" />
    </RelativeLayout>

    <!-- btnNotification -->
    <RelativeLayout
        android:id="@+id/btnNotification"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        app:layout_constraintTop_toBottomOf="@id/txtPermission"
        android:layout_marginTop="12dp"
        android:layout_marginHorizontal="23dp"
        android:background="@drawable/bg_frame_per">

        <com.tempttt.core.custom.text.DoubleStrokeTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            app:outerStrokeWidth="2dp"
            app:outerStrokeColor="@color/app"
            android:shadowColor="#33FFFFFF"
            android:shadowDy="5"
            android:shadowRadius="5"
            android:layout_marginStart="32dp"
            android:fontFamily="@font/luckiestguy_regular"
            android:gravity="start"
            android:text="@string/notification"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/swNotification"
            android:layout_width="56dp"
            android:layout_height="32dp"
            android:layout_alignParentEnd="true"

            android:scaleType="fitXY"
            android:layout_marginTop="9dp"
            android:layout_marginEnd="25dp"
            android:src="@drawable/ic_sw_on" />
    </RelativeLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />


    <!-- tvPermission badge — đặt sau cardContainer để render đè lên top card -->
    <com.tempttt.core.custom.text.OuterStrokeTextView
        android:id="@+id/tvPermission"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="56dp"
        android:textSize="24sp"
        android:layout_marginStart="15.5dp"

        android:elevation="4dp"
        android:fontFamily="@font/luckiestguy_regular"
        android:gravity="center"
        android:text="@string/permission"
        android:textColor="@color/app"
        android:shadowRadius="4"
        android:shadowDy="4"
        android:shadowColor="@color/white"
        app:outerStrokeWidth="1dp"
        app:outerStrokeColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- tvContinue -->
    <TextView
        android:id="@+id/tvContinue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="120dp"
        android:fontFamily="@font/luckiestguy_regular"
        android:gravity="center"
        android:text="@string/continue_per"
        android:textColor="@color/app"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
